--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="staticrypt-form">
                     <div class="staticrypt-instructions">
                         <p class="staticrypt-title">Protected Page</p>
-                        <p></p>
+                        <p style="font-size: 14px;">職務経歴書の閲覧をご希望の方は<a href="mailto:takuto.yoshikai@gmail.com" style="font-weight: bold; text-decoration:none; color: black;">吉開拓人</a>までご連絡ください。</p>
                     </div>
 
                     <hr class="staticrypt-hr" />
